--- a/htb/index.html
+++ b/htb/index.html
@@ -114,9 +114,9 @@
               <br></br><br></br><br></br>
               
               <li class="slide-top">
-              <picture><img src="../logo/htb.png" style="float: right; margin-right:0px; margin-left:60px; height:60px;" class="include_image zoomable"/>
-              <h2 class="post-list__post-title post-title"><a href="/htb/template" title="HackTheBox - Template">HackTheBox - Template</a></h2>
-              <p class="excerpt">HackTheBox Writeup Template</p>
+              <picture><img src="https://www.hackthebox.com/storage/avatars/d7bc2758fb7589dfa046bee9ce4d75cb.png" style="float: right; margin-right:0px; margin-left:60px; height:60px;" class="include_image zoomable"/>
+              <h2 class="post-list__post-title post-title"><a href="/htb/twomillion" title="HackTheBox - TwoMillion">HackTheBox - TwoMillion</a></h2>
+              <p class="excerpt">TwoMillion Machine Writeup</p>
               <div class="post-list__meta">
                 &#8226; <span class="post-meta__tags"><a>Lorem</a></span>
                 &#8226; <span class="post-meta__tags"><a>ipsum</a></span>
