--- a/htb/index.html
+++ b/htb/index.html
@@ -118,20 +118,17 @@
               <h2 class="post-list__post-title post-title"><a href="/htb/twomillion" title="HackTheBox - TwoMillion">HackTheBox - TwoMillion</a></h2>
               <p class="excerpt">TwoMillion Machine Writeup</p>
               <div class="post-list__meta">
-                &#8226; <span class="post-meta__tags"><a>Lorem</a></span>
-                &#8226; <span class="post-meta__tags"><a>ipsum</a></span>
-                &#8226; <span class="post-meta__tags"><a>dolor</a></span>
-                &#8226; <span class="post-meta__tags"><a>sit</a></span>
-                &#8226; <span class="post-meta__tags"><a>amet</a></span>
-                &#8226; <span class="post-meta__tags"><a>consectetur</a></span>
+                &#8226; <span class="post-meta__tags"><a>Linux</a></span>
+                &#8226; <span class="post-meta__tags"><a>API</a></span>
+                &#8226; <span class="post-meta__tags"><a>Command injection</a></span>
               </div>
             </li>
             <hr class="post-list__divider ">
                
             <li class="slide-top">
               <picture><img src="../logo/htb.png" style="float: right; margin-right:0px; margin-left:60px; height:60px;" class="include_image zoomable"/>
-              <h2 class="post-list__post-title post-title"><a href="/htb/template" title="HackTheBox - Template">HackTheBox - Template</a></h2>
-              <p class="excerpt">HackTheBox Writeup Template</p>
+              <h2 class="post-list__post-title post-title"><a href="/htb/template" title="HackTheBox - Template">HackTheBox - Placeholder</a></h2>
+              <p class="excerpt">HackTheBox Writeup Placeholder</p>
               <div class="post-list__meta">
                 &#8226; <span class="post-meta__tags"><a>Lorem</a></span>
                 &#8226; <span class="post-meta__tags"><a>ipsum</a></span>
