--- a/htb/twomillion/index.html
+++ b/htb/twomillion/index.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="robots" content="noindex">
 
-  <title>HackTheBox Writeup Template</title>
+  <title>HTB TwoMillion Writeup</title>
 
-  <meta name="description" content="Writeup HackTheBox Template">
+  <meta name="description" content="HTB TwoMillion Writeup">
   <meta name="author" content="Bruno-1337">
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
@@ -16,15 +16,15 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Writeup HackTheBox Template">
-  <meta name="twitter:description" content="Writeup HackTheBox Template">
+  <meta name="twitter:title" content="HTB TwoMillion Writeup">
+  <meta name="twitter:description" content="HTB TwoMillion Writeup">
   <meta name="twitter:creator" content="Bruno-1337">  
   <meta name="twitter:image" content="https://www.hackthebox.com/storage/avatars/d7bc2758fb7589dfa046bee9ce4d75cb.png" />
 
   <meta property="og:site_name" content="Bruno-1337" />
   <meta property="og:type" content="article">
-  <meta property="og:title" content="Writeup HackTheBox Template">
-  <meta property="og:description" content="Writeup HackTheBox Template">
+  <meta property="og:title" content="HTB TwoMillion Writeup">
+  <meta property="og:description" content="HTB TwoMillion Writeup">
   <meta property="og:image" content="https://www.hackthebox.com/storage/avatars/d7bc2758fb7589dfa046bee9ce4d75cb.png" />
 
   <link rel="manifest" href="/images/favicons/manifest.json">
@@ -151,7 +151,7 @@ body {
 
 <br>
 <br>          
-<h1 id="HackTheBox-template-writeup">HTB - TwoMillion</h1>
+<h1 id="HackTheBox-TwoMillion">HTB - TwoMillion</h1>
 <p>This is a writeup/walkthrough of the Hack the Box machine "TwoMillion" by TRX and TheCyberGeek</p>
 <p><img src="img/banner.png" alt=""></p> <!--foto do lab-->
 <p>Machine Link :  <a href="https://app.hackthebox.com/machines/TwoMillion">https://app.hackthebox.com/machines/TwoMillion</a></p>
@@ -274,7 +274,7 @@ body {
 <p><img src="img/wegotroot.png" alt=""></p>
 <p>We did it! we are root.</p>
 <p><img src="img/owned.png" alt=""></p>
-<h1 id="thanks-for-reading-">Thanks For Reading.</h1>
+<h1 id="thanks-for-reading-">Thanks For Reading!</h1>
 
 
 
