Added precious machine writeup
Added precious machine writeup

--- a/htb/easy/index.html
+++ b/htb/easy/index.html
@@ -233,6 +233,19 @@
             </li>
             <hr class="post-list__divider ">
 
+            <li class="slide-top">
+              <picture><img src="https://www.hackthebox.com/storage/avatars/3adcfd6093f8ddb4dffe8422da6377c8.png" style="float: right; margin-right:0px; margin-left:60px; height:60px;" class="include_image zoomable"/>
+              <h2 class="post-list__post-title post-title"><a href="https://krunous.notion.site/Precious-ef79683182464a6d861c56a58e9b7059" title="HackTheBox - Precious">HackTheBox - Precious</a></h2>
+              <p class="excerpt">Precious Machine Writeup</p>
+              <div class="post-list__meta">
+                &#8226; <span class="post-meta__tags"><a>Linux</a></span>
+                &#8226; <span class="post-meta__tags"><a>Ruby</a></span>
+                &#8226; <span class="post-meta__tags"><a>Sudo</a></span>
+                &#8226; <span class="post-meta__tags"><a>Yaml deseralization</a></span>
+                &#8226; <span class="post-meta__tags"><a>CVE-2022-25765</a></span>
+              </div>
+            </li>
+            <hr class="post-list__divider ">
 
 
             <!-- <li class="slide-top">
