--- a/htb/easy/index.html
+++ b/htb/easy/index.html
@@ -247,6 +247,19 @@
             </li>
             <hr class="post-list__divider ">
 
+            <li class="slide-top">
+              <picture><img src="https://www.hackthebox.com/storage/avatars/3adcfd6093f8ddb4dffe8422da6377c8.png" style="float: right; margin-right:0px; margin-left:60px; height:60px;" class="include_image zoomable"/>
+              <h2 class="post-list__post-title post-title"><a href="https://krunous.notion.site/Nunchucks-f4db3563ace54a0b8c630c397c6dd5eb" title="HackTheBox - Nunchucks">HackTheBox - Nunchucks</a></h2>
+              <p class="excerpt">Nunchucks Machine Writeup</p>
+              <div class="post-list__meta">
+                &#8226; <span class="post-meta__tags"><a>Linux</a></span>
+                &#8226; <span class="post-meta__tags"><a>NodeJS</a></span>
+                &#8226; <span class="post-meta__tags"><a>Nunchucks</a></span>
+                &#8226; <span class="post-meta__tags"><a>Perl</a></span>
+                &#8226; <span class="post-meta__tags"><a>CAP_SETUID</a></span>
+              </div>
+            </li>
+            <hr class="post-list__divider ">
 
             <!-- <li class="slide-top">
               <picture><img src="../logo/htb.png" style="float: right; margin-right:0px; margin-left:60px; height:60px;" class="include_image zoomable"/>
