Added ransom machine writeup
Added ransom machine writeup

--- a/htb/medium/index.html
+++ b/htb/medium/index.html
@@ -119,7 +119,7 @@
 
               <li class="slide-top">
                 <picture><img src="https://www.hackthebox.com/storage/avatars/a11b7f2db639a97bcece9b65a6c1409c.png" style="float: right; margin-right:0px; margin-left:60px; height:60px;" class="include_image zoomable"/>
-                <h2 class="post-list__post-title post-title"><a href="https://krunous.notion.site/Jupiter-f6cb9e203e954cf7bcebf6e1efc0cce1" title="HackTheBox - Template">HackTheBox - Jupiter</a></h2>
+                <h2 class="post-list__post-title post-title"><a href="https://krunous.notion.site/Jupiter-f6cb9e203e954cf7bcebf6e1efc0cce1" title="HackTheBox - Jupiter">HackTheBox - Jupiter</a></h2>
                 <p class="excerpt">HackTheBox Jupiter Writeup</p>
                 <div class="post-list__meta">
                   &#8226; <span class="post-meta__tags"><a>Linux</a></span>
@@ -131,6 +131,22 @@
                 </div>
               </li>
               <hr class="post-list__divider ">
+
+              <li class="slide-top">
+                <picture><img src="https://www.hackthebox.com/storage/avatars/84c47c9b0cca13f45b6b0a950a3a90c0.png" style="float: right; margin-right:0px; margin-left:60px; height:60px;" class="include_image zoomable"/>
+                <h2 class="post-list__post-title post-title"><a href="https://krunous.notion.site/Ransom-bcba85671fd445c5aedd4cb5a02a6c40" title="HackTheBox - Ransom">HackTheBox - Ransom</a></h2>
+                <p class="excerpt">HackTheBox Ransom Writeup</p>
+                <div class="post-list__meta">
+                  &#8226; <span class="post-meta__tags"><a>Linux</a></span>
+                  &#8226; <span class="post-meta__tags"><a>PHP</a></span>
+                  &#8226; <span class="post-meta__tags"><a>Type Juggling</a></span>
+                  &#8226; <span class="post-meta__tags"><a>Exposed credentials</a></span>
+                  &#8226; <span class="post-meta__tags"><a>Weak zip encryption</a></span>
+                  &#8226; <span class="post-meta__tags"><a>ZipCrypto / bkcrack</a></span>
+                </div>
+              </li>
+              <hr class="post-list__divider ">
+              
 
               <li class="slide-top">
                 <picture><img src="https://www.hackthebox.com/storage/avatars/5147467f5bb0d84eff614fd4ef2f7c23.png" style="float: right; margin-right:0px; margin-left:60px; height:60px;" class="include_image zoomable"/>
@@ -145,6 +161,7 @@
                   &#8226; <span class="post-meta__tags"><a>Cypher Injection</a></span>
                 </div>
               </li>
+              <hr class="post-list__divider ">
 
             <!-- <li class="slide-top">
               <picture><img src="../logo/htb.png" style="float: right; margin-right:0px; margin-left:60px; height:60px;" class="include_image zoomable"/>
