--- a/htb/medium/index.html
+++ b/htb/medium/index.html
@@ -146,6 +146,19 @@
                 </div>
               </li>
               <hr class="post-list__divider ">
+
+              <li class="slide-top">
+                <picture><img src="https://www.hackthebox.com/storage/avatars/9285640b526bf29343d8ca1a4ec778a2.png" style="float: right; margin-right:0px; margin-left:60px; height:60px;" class="include_image zoomable"/>
+                <h2 class="post-list__post-title post-title"><a href="https://krunous.notion.site/Celestial-7f578baab75743dfb1cad4ace0889494" title="HackTheBox - Celestial">HackTheBox - Celestial</a></h2>
+                <p class="excerpt">HackTheBox Celestial Writeup</p>
+                <div class="post-list__meta">
+                  &#8226; <span class="post-meta__tags"><a>Linux</a></span>
+                  &#8226; <span class="post-meta__tags"><a>NodeJS</a></span>
+                  &#8226; <span class="post-meta__tags"><a>Deserialization</a></span>
+                  &#8226; <span class="post-meta__tags"><a>Python</a></span>
+                </div>
+              </li>
+              <hr class="post-list__divider ">
               
 
               <li class="slide-top">
