Added Cronos machine writeup
Added Cronos machine writeup

--- a/htb/medium/index.html
+++ b/htb/medium/index.html
@@ -159,6 +159,21 @@
                 </div>
               </li>
               <hr class="post-list__divider ">
+
+              <li class="slide-top">
+                <picture><img src="https://www.hackthebox.com/storage/avatars/f77c75f363afe0d0a6eeccf6a8d8c252.png" style="float: right; margin-right:0px; margin-left:60px; height:60px;" class="include_image zoomable"/>
+                <h2 class="post-list__post-title post-title"><a href="https://krunous.notion.site/Cronos-ab386ee2b2b44e14838b077d7884d834" title="HackTheBox - Cronos">HackTheBox - Cronos</a></h2>
+                <p class="excerpt">HackTheBox Cronos Writeup</p>
+                <div class="post-list__meta">
+                  &#8226; <span class="post-meta__tags"><a>Linux</a></span>
+                  &#8226; <span class="post-meta__tags"><a>DNS</a></span>
+                  &#8226; <span class="post-meta__tags"><a>Login Bypass</a></span>
+                  &#8226; <span class="post-meta__tags"><a>RCE</a></span>
+                  &#8226; <span class="post-meta__tags"><a>Php</a></span>
+                  &#8226; <span class="post-meta__tags"><a>Cronjob</a></span>
+                </div>
+              </li>
+              <hr class="post-list__divider ">
               
 
               <li class="slide-top">
